<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--now add some icons-->

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/user"
            android:title="@string/menu_suckhoe"
            android:icon="@drawable/ic_menu_suckhoe"
            />
        <item
            android:id="@+id/menu"
            android:title="@string/menu_menu"
            android:icon="@drawable/ic_menu_menumonan"
            />
        <item
            android:id="@+id/nguyenlieu"
            android:title="@string/menu_nguyenlieu"
            android:icon="@drawable/ic_menu_nguyenlieu"
            />
        <item
            android:id="@+id/thongbao"
            android:title="@string/menu_thongbao"
            android:icon="@drawable/ic_menu_thongbao"
            />
        <item
            android:id="@+id/setting"
            android:title="@string/menu_setting"
            android:icon="@drawable/ic_menu_setting"
            />
        <item
            android:id="@+id/about"
            android:title="@string/menu_about"
            android:icon="@drawable/ic_menu_about"
            />
    </group>

</menu>