<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/update_user_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecond"
    tools:context=".activities.update_user_infomation">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <ImageView
        android:id="@+id/img_avt_update_v2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/tv_no_color"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avata_add" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="148dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="135dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="126dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:gravity="right"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/username"
        android:textColor="@color/textOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <TextView
        android:id="@+id/tvMail"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="right"
        android:paddingRight="2dp"
        android:text="@string/mail"
        android:textColor="@color/textOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="right"
        android:text="@string/pass"
        android:textColor="@color/textOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMail" />

    <TextView
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="right"
        android:text="@string/age"
        android:textColor="@color/textOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPass" />

    <TextView
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="right"
        android:text="@string/height"
        android:textColor="@color/textOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="right"
        android:text="@string/weight"
        android:textColor="@color/textOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <EditText
        android:id="@+id/edt_user_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textview_backgroud"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/textOnPrimary"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <EditText
        android:id="@+id/edt_gmail_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textview_backgroud"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/gmail"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <EditText
        android:id="@+id/edt_pass_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textview_backgroud"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/pass"
        android:inputType="numberPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <EditText
        android:id="@+id/edt_age_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textview_backgroud"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/age"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <EditText
        android:id="@+id/edt_height_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textview_backgroud"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/height"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <EditText
        android:id="@+id/edt_weight_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textview_backgroud"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/weight"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <Button
        android:id="@+id/btn_update_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/update"
        android:textColor="@color/textOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <Button
        android:id="@+id/btn_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@color/colorPrimary"
        android:text="@string/cancel"
        android:textColor="@color/textOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />
</androidx.constraintlayout.widget.ConstraintLayout>