<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@color/textOnPrimary"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txt_cancle_x"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/cancle_x_button"
        android:gravity="center"
        android:text="X"
        android:textColor="@color/textOnPrimary"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:srcCompat="@drawable/ic_delete_whitle" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/strock" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/question"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/textOnPrimary" />

        <Button
            android:id="@+id/btn_delete_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/textOnPrimary" />
    </LinearLayout>

</LinearLayout>